--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,33 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
+  width: 100%;
   padding: 2rem;
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.app-container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.app-container-title {
+  font-size: 3.2em;
+  line-height: 1.1;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.app-container-md {
+  display: flex;
 }
 
-.card {
-  padding: 2em;
+.md {
+  margin: 0;
+  text-align: start;
 }
 
-.read-the-docs {
-  color: #888;
+.md-h-one {
+  border-bottom: 2px solid azure;
+}
+
+.md-h-two {
+  border-bottom: 1px solid azure;
 }
